# vapor

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  compose.dev.yaml  compose.yaml  example.env  mypy.ini  pyproject.toml  setup.py
.agents/: chat.md
.github/workflows/: test-vapor.yml  test.yml
dockerfiles/: vapor-app.dockerfile  vapor-mcp.dockerfile  vapor-svc.dockerfile  vapor.dockerfile
scripts/: dev-setup.sh  run-tests.sh  start.sh  stop.sh  update-env.sh
scripts/dev/: quit.sh  run-tests.sh  setup.sh  start.sh
tests/: conftest.py  test_app.py  test_chat.py  test_factory.py  test_model2neo4j.py  test_models.py  test_neo4jclient.py  test_populate.py  test_routes.py  test_steam2neo4j.py  test_steamclient.py  test_tools.py  test_utils.py
tests/helpers/: globals.py  verify_neo4j_connect.py
vapor/: __init__.py  chat.py  chromaclient.py  draw.py  embed.py  graph.py  info.py  populate.py  run.py  steam2neo4j.py  steamclient.py
vapor/_types/: context.py
vapor/app/: deps.py  factory.py  main.py
vapor/app/dao/: __init__.py  games.py
vapor/app/db/: driver.py  uow.py
vapor/app/mcp/: __init__.py  games.py
vapor/app/routes/: __init__.py  games.py  status.py
vapor/app/services/: __init__.py  games.py
vapor/clients/: __init__.py  neo4jclient.py  steamclient.py
vapor/models/: __init__.py  embeddings.py  llm.py  prompts.py
vapor/steam/: __init__.py  steamgraph.py
vapor/svc/: app.py
vapor/tools/: __init__.py  games.py
vapor/utils/: env.py  logging.py  model2neo4j.py  neo4jutils.py  steam2neo4j.py  steamutils.py  utils.py
(+11 files in other folders)
