[project]
name = "vapor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "autoflake",
  "pytest",
  "pytest-coverage",
  "pytest-mock",
  "pytest-asyncio",
]
core = [
  "python-steam-api",
  "neo4j-driver",
  "html2text",
  "rich",
  "dotenv",
  "pandas",
  "loguru",
  "langchain",
  "langchain-ollama",
  "langchain-text-splitters",
  "langchain-mcp-adapters",
]
app = [
  "vapor[core]",
  "fastapi[standard]",
  "fastmcp",
]
all = [
  "vapor[core,app]"
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
  "ignore::neo4j.ExperimentalWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
  "neo4j: tests requiring neo4j instance",
]
minversion = "6.0"
testpaths = "tests/"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "raise NotImplementedError()",
  "if __name__ == .__main__.:",
]
